<resources>
    <string name="service_description">事前に定義したURLから応答を求めるサービスです。</string>
    <string name="app_name">SubscribeWebpage</string>
    <string name="insert_page">InsertPage</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="menu_add_observer">追加</string>
    <string name="menu_delete_observer">削除</string>
    <string name="menu_modify_observer">編集</string>

    <string name="menu_refresh_observer">再読み込み</string>
    <string name="menu_close_fab">閉じる</string>

    <string name="dialog_title">必須入力項目</string>
    <string name="dialog_optional_title">任意入力項目</string>
    <string name="dialog_ok">登録</string>
    <string name="dialog_cancel">取消</string>

    <string name="dialog_question">本当に行いますか？</string>
    <string name="dialog_question_no">本当に取り消しますか？</string>
    <string name="dialog_yes">はい</string>
    <string name="dialog_no">いいえ</string>

    <string-array name="css_query_array">
        <item>a[href^=</item>
        <item>a[href$=</item>
        <item>a[href*=</item>
        <item>a[href~=</item>
        <item>value</item>
        <item>type</item>
        <item>text</item>
        <item>password</item>
        <item>email</item>
        <item>checkbox</item>
        <item>file</item>
        <item>submit</item>
        <item>reset</item>
        <item>button</item>
        <item>hidden</item>
        <item>textarea</item>
        <item>option</item>
        <item>div</item>
        <item>target</item>
        <item>href</item>
        <item>input</item>
        <item>border</item>
        <item>red</item>
        <item>blue</item>
        <item>black</item>
        <item>solid</item>
    </string-array>

    <string name="TITLE_INSERT_PAGE">詳細ページ</string>
    <string name="TITLE_LIST_PAGE">WEBモニタリング</string>
    <string name="https">https://</string>
    <string name="tv_search_key">설정된 검색어</string>
    <string name="bt_search">검색</string>
    <string name="bt_set_search_key">검색어 설정</string>
</resources>
