<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/tv_search_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_row="0"
            android:layout_column="1"
            android:breakStrategy="balanced"
            android:id="@+id/search_key"
            android:text="..."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:text="@string/bt_set_search_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </GridLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>